--- a/index.html
+++ b/index.html
@@ -90,4 +90,6 @@
 <span class="material-symbols-outlined text-3xl" data-icon="star">star</span>
 </div>
 </div>
-</body></html>
+</body>
+<script src="js/main.js"></script>
+</html>
