--- a/index.html
+++ b/index.html
@@ -35,3 +35,83 @@ tailwind.config = {
                 xl: "1.5rem",
                 full: "9999px"
             },
+        },
+    },
+}
+</script>
+
+<style>
+.material-symbols-outlined {
+    font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
+body {
+    min-height: max(884px, 100dvh);
+}
+</style>
+
+</head>
+<body class="bg-background-light dark:bg-background-dark font-display">
+
+<div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden">
+
+    <div class="flex flex-col items-center justify-center flex-grow p-6 text-center">
+
+        <!-- Ícone -->
+        <div class="flex w-full max-w-xs grow items-center justify-center py-8">
+            <div class="relative flex h-48 w-48 items-center justify-center rounded-full bg-secondary/10 dark:bg-secondary/20">
+                <span class="material-symbols-outlined text-9xl text-secondary">card_giftcard</span>
+                <span class="material-symbols-outlined absolute -top-2 -right-2 text-5xl text-accent rotate-12">help</span>
+            </div>
+        </div>
+
+        <!-- Textos -->
+        <div class="w-full max-w-md">
+            <h1 class="text-text-primary dark:text-gray-100 tracking-tight text-[32px] font-bold leading-tight pt-6 pb-3">
+                Amigo Secreto - Palpites
+            </h1>
+            <p class="text-text-secondary dark:text-gray-400 text-base font-normal leading-normal pb-8">
+                A diversão de adivinhar quem te tirou!
+            </p>
+        </div>
+
+        <!-- Botões -->
+        <div class="w-full max-w-md space-y-4">
+
+            <!-- Botão COMEÇAR com navegação -->
+            <div class="flex px-4 py-1 justify-center">
+                <button 
+                    data-nav="Palpites.html"
+                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-14 px-5 flex-1 bg-primary text-white text-lg font-bold shadow-lg shadow-primary/30 hover:bg-primary/90 transition-colors">
+                    <span class="truncate">Começar</span>
+                </button>
+            </div>
+
+            <!-- Link Login -->
+            <p 
+                data-nav="login_cadastro.html"
+                class="text-secondary dark:text-green-300 text-sm font-medium leading-normal py-3 px-4 text-center underline cursor-pointer hover:opacity-80">
+                Já tem uma conta? Faça login
+            </p>
+        </div>
+
+    </div>
+
+    <!-- Estrelas decorativas -->
+    <div class="absolute top-10 left-5 text-accent opacity-50">
+        <span class="material-symbols-outlined text-2xl">star</span>
+    </div>
+    <div class="absolute top-24 right-8 text-accent opacity-40">
+        <span class="material-symbols-outlined text-lg">star</span>
+    </div>
+    <div class="absolute bottom-1/3 left-8 text-accent opacity-30">
+        <span class="material-symbols-outlined text-xl">star</span>
+    </div>
+    <div class="absolute bottom-16 right-10 text-accent opacity-60">
+        <span class="material-symbols-outlined text-3xl">star</span>
+    </div>
+
+</div>
+
+<script src="js/main.js"></script>
+</body>
+</html>
